# AI-Based-Complaint-Priority-System

./: README.md  convert_img.py
ai_backend/: .env.example  main.py  pyproject.toml  requirements.txt
ai_backend/app/agents/: predictive_agent.py  verification_agent.py  vision_agent.py  workflow.py
ai_backend/app/api/routes/: complaint_routes.py
ai_backend/app/api/schemas/: combined.py  complaint.py  priority.py
ai_backend/app/config/: settings.py
ai_backend/app/models/: best_garbage.pt  best_road.pt  best_water.pt
ai_backend/app/services/: severity_model_loader.py  severity_predictor.py
ai_backend/app/utils/: priority_engine.py  severity_rules.py
steamlit_frontend/: app.py
